# parrot-buddy

./: .gitignore  README.md  README_zh.md  build_esp32.bat  build_esp32.ps1  do_flash.bat  sdkconfig.defaults  serial_monitor.py
components/agent_core/: CMakeLists.txt
components/agent_core/include/: agent_core.h  agent_events.h
components/agent_core/src/: agent_core.c
components/audio_manager/: CMakeLists.txt
components/audio_manager/include/: audio_manager.h  audio_recording.h
components/audio_manager/src/: audio_manager.c  audio_recording.c
components/parrot_core/: CMakeLists.txt
components/parrot_core/include/: parrot_core.h  sound_detection.h
components/parrot_core/src/: parrot_core.c  sound_detection.c
components/protocol/: CMakeLists.txt
components/protocol/include/: protocol.h
components/protocol/src/: protocol.c
components/transport/: CMakeLists.txt
components/transport/include/: transport.h
components/transport/src/: transport.c
components/ui/: CMakeLists.txt
components/ui/src/: ui_manager.c  ui_screen_recording.c
docs/: architecture.md  autotune_external_agent_runbook.md  parrot_autoresearch_loop.md  parrot_call_detection_options.md
docs/superpowers/plans/: 2026-04-23-parrot-recording-phase1-chunk1-review.md  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  main.c
test/: test_agent_core.c  test_audio_recording.c
tools/autotune/: README.md  requirements.txt  run_lan_ollama.ps1  run_local_ollama.ps1  run_phase_a.ps1
tools/parrot-receiver/: README.md  receiver.py  requirements.txt
(+24 files in other folders)
